--- a/app.json
+++ b/app.json
@@ -23,10 +23,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
+      },
+      "package": "com.friend.com",
+      "config":{
+        "googleMaps":{
+          "apiKey": "AIzaSyAzuRUGI4Dh3rfuhFLuOcTvGsknDgFjqXI"
+        }
       }
     },
     "web": {
       "favicon": "./assets/favicon.png"
     }
+    
   }
 }
