--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "expo": "~44.0.0",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-activity-indicator": "^0.0.4",
     "react-native-maps": "0.29.4",
     "react-native-web": "0.17.1",
     "react-router-native": "^6.3.0"
