--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
+    "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
