--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
+    "expo-dev-client": "~0.8.4",
     "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
@@ -20,7 +21,6 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-activity-indicator": "^0.0.4",
     "react-native-maps": "0.29.4",
     "react-native-web": "0.17.1",
     "react-router-native": "^6.3.0"
