--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-maps": "0.29.4",
     "react-native-web": "0.17.1",
     "react-router-native": "^6.3.0"
@@ -29,6 +30,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-datepicker": "^1.7.1",
     "typescript": "~4.3.5"
   },
   "private": true
