--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~44.0.0",
     "expo-dev-client": "~0.8.5",
     "expo-image-picker": "~12.0.1",
+    "expo-linear-gradient": "~11.0.3",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
