--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-maps": "0.29.4",
     "react-native-web": "0.17.1",
-    "react-router-native": "^6.3.0"
+    "react-router-native": "^6.3.0",
+    "socket.io-client": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
