--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-datepicker": "^1.7.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-maps": "0.29.4",
     "react-native-web": "0.17.1",
     "react-router-native": "^6.3.0",
