--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "friend",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "axios": "^0.26.1",
-    "dotenv": "^16.0.0",
-    "expo": "~44.0.0",
-    "expo-dev-client": "~0.8.5",
-    "expo-image-picker": "~12.0.1",
-    "expo-linear-gradient": "~11.0.3",
-    "expo-location": "~14.0.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-datepicker": "^1.7.2",
-    "react-native-gifted-chat": "^0.16.3",
-    "react-native-maps": "0.29.4",
-    "react-native-uuid": "^2.0.1",
-    "react-native-web": "0.17.1",
-    "react-router-native": "^6.3.0",
-    "socket.io-client": "^4.5.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "@types/react-native-datepicker": "^1.7.1",
-    "typescript": "~4.3.5"
-  },
-  "private": true
+	"name": "friend",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"axios": "^0.26.1",
+		"dotenv": "^16.0.0",
+		"expo": "~44.0.0",
+		"expo-dev-client": "~0.8.6",
+		"expo-image-picker": "~12.0.1",
+		"expo-linear-gradient": "~11.0.3",
+		"expo-location": "~14.0.1",
+		"expo-status-bar": "~1.2.0",
+		"expo-updates": "~0.11.7",
+		"firebase": "^8.2.3",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"react-native": "0.64.3",
+		"react-native-datepicker": "^1.7.2",
+		"react-native-gifted-chat": "^0.16.3",
+		"react-native-maps": "0.29.4",
+		"react-native-uuid": "^2.0.1",
+		"react-native-web": "0.17.1",
+		"react-router-native": "^6.3.0",
+		"socket.io-client": "^4.5.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@types/react": "~17.0.21",
+		"@types/react-native": "~0.64.12",
+		"@types/react-native-datepicker": "^1.7.1",
+		"typescript": "~4.3.5"
+	},
+	"private": true
 }
