--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-native-datepicker": "^1.7.2",
 		"react-native-gifted-chat": "^0.16.3",
 		"react-native-maps": "0.29.4",
+		"react-native-svg": "12.1.1",
 		"react-native-uuid": "^2.0.1",
 		"react-native-web": "0.17.1",
 		"react-router-native": "^6.3.0",
