--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"firebase": "^8.2.3",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
+		"react-jwt": "^1.1.8",
 		"react-native": "0.64.3",
 		"react-native-datepicker": "^1.7.2",
 		"react-native-gifted-chat": "^0.16.3",
