--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
 		"eject": "expo eject"
 	},
 	"dependencies": {
-		"axios": "^0.26.1",
 		"dotenv": "^16.0.0",
 		"expo": "~44.0.0",
 		"expo-dev-client": "~0.8.6",
@@ -20,6 +19,7 @@
 		"expo-status-bar": "~1.2.0",
 		"expo-updates": "~0.11.7",
 		"firebase": "^8.2.3",
+		"hash.js": "^1.1.7",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
 		"react-jwt": "^1.1.8",
@@ -27,11 +27,11 @@
 		"react-native-datepicker": "^1.7.2",
 		"react-native-gifted-chat": "^0.16.3",
 		"react-native-maps": "0.29.4",
+		"react-native-sha256": "^1.4.9",
 		"react-native-svg": "12.1.1",
 		"react-native-uuid": "^2.0.1",
 		"react-native-web": "0.17.1",
-		"react-router-native": "^6.3.0",
-		"socket.io-client": "^4.5.1"
+		"react-router-native": "^6.3.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
